# meshcore

./: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt  CMakePresets.json  README.md
include/: MeshCore.hpp
src/: CMakeLists.txt  MeshCore.cpp  main.cpp
tests/: CMakeLists.txt
tests/unit/: test_version.cpp
