cmake_minimum_required(VERSION 3.20)

project(
    MeshCore
    VERSION 0.1.0
    DESCRIPTION "Modern C++ mesh processing engine"
    LANGUAGES C CXX
)

set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

option(MESHCORE_BUILD_TESTS "Build tests" ON)

add_subdirectory(src)

if(MESHCORE_BUILD_TESTS)
    enable_testing()
    add_subdirectory(tests)
endif()